kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: develop
spec:
  type: NodePort  # Move type here
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    # Optionally specify a nodePort
    # nodePort: 30007  # Uncomment if you want to specify a port
  selector:
    app: solar-system
